@@ -24,6 +24,8 @@
     <File name="./gtk-gui/Monodoc.Editor.OpenDocDialog.cs" subtype="Code" buildaction="Compile" />
     <File name="./gtk-gui/Monodoc.Editor.EditorWindow.cs" subtype="Code" buildaction="Compile" />
     <File name="./monodoc.png" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="./SaveDocDialog.cs" subtype="Code" buildaction="Compile" />
+    <File name="./gtk-gui/Monodoc.Editor.SaveDocDialog.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
