@@ -1,0 +1,22 @@
+//
+// SaveDocDialog.cs: Dialog to save a XML Mono documenation.
+//
+// Author:
+//   Hector E. Gomez M (hectorgm@ciencias.unam.mx)
+//
+// (C) 2007 Hector E. Gomez M
+//
+
+using System;
+using System.IO;
+using Gtk;
+
+namespace Monodoc.Editor {
+public partial class SaveDocDialog : Gtk.Dialog {
+	
+	public SaveDocDialog()
+	{
+		this.Build();
+	}
+}
+}
