@@ -19,6 +19,10 @@ namespace Monodoc.Editor {
         
         private Gtk.Action Open;
         
+        private Gtk.Action Save;
+        
+        private Gtk.Action SaveAs;
+        
         private Gtk.VBox vbox1;
         
         private Gtk.MenuBar menubar1;
@@ -37,7 +41,7 @@ namespace Monodoc.Editor {
             Gtk.UIManager w1 = new Gtk.UIManager();
             Gtk.ActionGroup w2 = new Gtk.ActionGroup("Default");
             this.File = new Gtk.Action("File", Mono.Unix.Catalog.GetString("_File"), null, null);
-            this.File.ShortLabel = Mono.Unix.Catalog.GetString("File");
+            this.File.ShortLabel = Mono.Unix.Catalog.GetString("_File");
             w2.Add(this.File, null);
             this.Quit = new Gtk.Action("Quit", Mono.Unix.Catalog.GetString("_Quit"), null, "gtk-quit");
             this.Quit.ShortLabel = Mono.Unix.Catalog.GetString("_Quit");
@@ -45,6 +49,12 @@ namespace Monodoc.Editor {
             this.Open = new Gtk.Action("Open", Mono.Unix.Catalog.GetString("_Open"), null, "gtk-open");
             this.Open.ShortLabel = Mono.Unix.Catalog.GetString("_Open");
             w2.Add(this.Open, null);
+            this.Save = new Gtk.Action("Save", Mono.Unix.Catalog.GetString("_Save"), null, "gtk-save");
+            this.Save.ShortLabel = Mono.Unix.Catalog.GetString("_Save");
+            w2.Add(this.Save, null);
+            this.SaveAs = new Gtk.Action("SaveAs", Mono.Unix.Catalog.GetString("Save _As"), null, "gtk-save-as");
+            this.SaveAs.ShortLabel = Mono.Unix.Catalog.GetString("Save _As");
+            w2.Add(this.SaveAs, null);
             w1.InsertActionGroup(w2, 0);
             this.AddAccelGroup(w1.AccelGroup);
             this.Name = "Monodoc.Editor.EditorWindow";
@@ -56,7 +66,7 @@ namespace Monodoc.Editor {
             this.vbox1.Name = "vbox1";
             this.vbox1.Spacing = 3;
             // Container child vbox1.Gtk.Box+BoxChild
-            w1.AddUiFromString("<ui><menubar name='menubar1'><menu action='File'><menuitem action='Open'/><menuitem action='Quit'/></menu></menubar></ui>");
+            w1.AddUiFromString("<ui><menubar name='menubar1'><menu action='File'><menuitem action='Open'/><menuitem action='Quit'/><separator/><menuitem action='Save'/><menuitem action='SaveAs'/></menu></menubar></ui>");
             this.menubar1 = ((Gtk.MenuBar)(w1.GetWidget("/menubar1")));
             this.menubar1.Name = "menubar1";
             this.vbox1.Add(this.menubar1);
@@ -65,7 +75,7 @@ namespace Monodoc.Editor {
             w3.Expand = false;
             w3.Fill = false;
             // Container child vbox1.Gtk.Box+BoxChild
-            w1.AddUiFromString("<ui><toolbar name='toolbar1'><toolitem action='Open'/></toolbar></ui>");
+            w1.AddUiFromString("<ui><toolbar name='toolbar1'><toolitem action='Open'/><toolitem action='Save'/></toolbar></ui>");
             this.toolbar1 = ((Gtk.Toolbar)(w1.GetWidget("/toolbar1")));
             this.toolbar1.Name = "toolbar1";
             this.toolbar1.ShowArrow = false;
@@ -112,6 +122,8 @@ namespace Monodoc.Editor {
             this.DeleteEvent += new Gtk.DeleteEventHandler(this.OnDeleteEvent);
             this.Quit.Activated += new System.EventHandler(this.OnQuitActivated);
             this.Open.Activated += new System.EventHandler(this.OnOpenActivated);
+            this.Save.Activated += new System.EventHandler(this.OnSaveActivated);
+            this.SaveAs.Activated += new System.EventHandler(this.OnSaveAsActivated);
         }
     }
 }
