@@ -11,7 +11,7 @@
       <action id="File">
         <property name="Type">Action</property>
         <property name="Label" translatable="yes">_File</property>
-        <property name="ShortLabel" translatable="yes">File</property>
+        <property name="ShortLabel" translatable="yes">_File</property>
       </action>
       <action id="Quit">
         <property name="Type">Action</property>
@@ -26,6 +26,20 @@
         <property name="ShortLabel" translatable="yes">_Open</property>
         <property name="StockId">gtk-open</property>
         <signal name="Activated" handler="OnOpenActivated" />
+      </action>
+      <action id="Save">
+        <property name="Type">Action</property>
+        <property name="Label" translatable="yes">_Save</property>
+        <property name="ShortLabel" translatable="yes">_Save</property>
+        <property name="StockId">gtk-save</property>
+        <signal name="Activated" handler="OnSaveActivated" />
+      </action>
+      <action id="SaveAs">
+        <property name="Type">Action</property>
+        <property name="Label" translatable="yes">Save _As</property>
+        <property name="ShortLabel" translatable="yes">Save _As</property>
+        <property name="StockId">gtk-save-as</property>
+        <signal name="Activated" handler="OnSaveAsActivated" />
       </action>
     </action-group>
     <property name="MemberName" />
@@ -44,6 +58,9 @@
               <node type="Menu" action="File">
                 <node type="Menuitem" action="Open" />
                 <node type="Menuitem" action="Quit" />
+                <node type="Separator" />
+                <node type="Menuitem" action="Save" />
+                <node type="Menuitem" action="SaveAs" />
               </node>
             </node>
           </widget>
@@ -59,8 +76,9 @@
             <property name="MemberName" />
             <property name="ShowArrow">False</property>
             <property name="ButtonStyle">Icons</property>
-            <node name="toolbar1" type="Menubar">
+            <node name="toolbar1" type="Toolbar">
               <node type="Toolitem" action="Open" />
+              <node type="Toolitem" action="Save" />
             </node>
           </widget>
           <packing>
@@ -173,6 +191,73 @@
             <property name="ResponseId">-1</property>
             <signal name="Clicked" handler="OnButtonOkClicked" />
             <property name="label">gtk-open</property>
+          </widget>
+          <packing>
+            <property name="Position">1</property>
+            <property name="Expand">False</property>
+            <property name="Fill">False</property>
+          </packing>
+        </child>
+      </widget>
+    </child>
+  </widget>
+  <widget class="Gtk.Dialog" id="Monodoc.Editor.SaveDocDialog" design-size="599 176">
+    <property name="MemberName" />
+    <property name="WindowPosition">CenterOnParent</property>
+    <property name="Buttons">2</property>
+    <property name="HelpButton">False</property>
+    <property name="HasSeparator">False</property>
+    <child internal-child="VBox">
+      <widget class="Gtk.VBox" id="dialog1_VBox">
+        <property name="MemberName" />
+        <property name="BorderWidth">2</property>
+        <child>
+          <widget class="Gtk.FileChooserWidget" id="filechooserwidget1">
+            <property name="MemberName" />
+            <property name="Action">Save</property>
+          </widget>
+          <packing>
+            <property name="Position">0</property>
+            <property name="AutoSize">True</property>
+          </packing>
+        </child>
+      </widget>
+    </child>
+    <child internal-child="ActionArea">
+      <widget class="Gtk.HButtonBox" id="dialog1_ActionArea">
+        <property name="MemberName" />
+        <property name="Spacing">6</property>
+        <property name="BorderWidth">5</property>
+        <property name="Size">2</property>
+        <property name="LayoutStyle">End</property>
+        <child>
+          <widget class="Gtk.Button" id="buttonCancel">
+            <property name="MemberName" />
+            <property name="CanDefault">True</property>
+            <property name="CanFocus">True</property>
+            <property name="UseStock">True</property>
+            <property name="Type">StockItem</property>
+            <property name="StockId">gtk-cancel</property>
+            <property name="IsDialogButton">True</property>
+            <property name="ResponseId">-6</property>
+            <property name="label">gtk-cancel</property>
+          </widget>
+          <packing>
+            <property name="Expand">False</property>
+            <property name="Fill">False</property>
+          </packing>
+        </child>
+        <child>
+          <widget class="Gtk.Button" id="buttonOk">
+            <property name="MemberName" />
+            <property name="CanDefault">True</property>
+            <property name="CanFocus">True</property>
+            <property name="UseStock">True</property>
+            <property name="Type">StockItem</property>
+            <property name="StockId">gtk-ok</property>
+            <property name="IsDialogButton">True</property>
+            <property name="ResponseId">-5</property>
+            <property name="label">gtk-ok</property>
           </widget>
           <packing>
             <property name="Position">1</property>
